--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My CS180 Portfolio</title>
+    <title>CS 180 Fall 2024 Project 1: Images of the Russian Empire -- Colorizing the Prokudin-Gorskii Photo Collection</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: Spectral, sans-serif;
             line-height: 1.6;
             margin: 0;
             padding: 20px;
