--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CS 180 Fall 2024 Project 1: Images of the Russian Empire -- Colorizing the Prokudin-Gorskii Photo Collection</title>
+    <title>CS 180 Fall 2024 Project 1: Images of the Russian Empire -- Colorizing the Prokudin-Gorskii Photo Collection
+    Alp Eren Ozdarendeli</title>
     <style>
         body {
             font-family: Spectral, sans-serif;
