--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 <body>
     <h1>Welcome to My CS180 Portfolio!</h1>
     
-    <h2>Overview</h2>
-    <p>This is where you can provide an overview of your portfolio and your CS180 experience.</p>
+    <h2>Project Overview</h2>
+    <p>With Tzar’s special permission, Sergei Mikhailovich Prokudin-Gorskii travelled across the Russian Empire in the 20th century. He has taken photographs of everything, ranging from people to buildings even bridges. His idea was to save three exposures of thousands of color pictures onto a glass plate with red, green, and blue filters. His glass plate negatives has been digitized by the Library of Congress. This project aims to automatically produce a color image of these glass plate images with modern image processing methods. </p>
     
     <h2>Project Details</h2>
     <p>Here you can list and describe your projects:</p>
