--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>CS 180 Fall 2024 Project 1: Images of the Russian Empire -- Colorizing the Prokudin-Gorskii Photo Collection</title>
     <style>
         body {
-            font-family: Spectral, sans-serif;
+            font-family: Arial, sans-serif;
             line-height: 1.6;
             margin: 0;
             padding: 20px;
