--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     
     <h2>Images</h2>
     <div class="image-container">
-        <img src="/api/placeholder/400/300" alt="Project 1 Screenshot">
+        <img src="/images/cathedral_output.jpg" alt=" <i>cathedral.jpg</i> gshift: [5, 2] rshift: [12, 3]">
         <p class="image-description">Screenshot of Project 1 main interface</p>
     </div>
     
