--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <h2>Images</h2>
     <div class="image-container">
         <img src="/images/cathedral_output.jpg" alt=" <i>cathedral.jpg</i> gshift: [5, 2] rshift: [12, 3]">
-        <p class="image-description">Screenshot of Project 1 main interface</p>
+        <p class="image-description"> <i>cathedral.jpg</i> gshift: [5, 2] rshift: [12, 3]</p>
     </div>
     
     <div class="image-container">
