--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
         <img src="/images/cathedral_output.jpg" alt=" <i>cathedral.jpg</i> gshift: [5, 2] rshift: [12, 3]">
         <p class="image-description"> <i>cathedral.jpg</i> gshift: [5, 2] rshift: [12, 3]</p>
     </div>
-    
     <div class="image-container">
-        <img src="/api/placeholder/400/300" alt="Project 2 Diagram">
-        <p class="image-description">System architecture diagram for Project 2</p>
+        <img src="/images/monastery_output.jpg" alt=" <i>monastery.jpg</i> gshift: [-3, 2] rshift: [3, 2]">
+        <p class="image-description"> <i>cathedral.jpg</i> gshift: gshift: [-3, 2] rshift: [3, 2]</p>
     </div>
-    
-    <!-- Add more image containers as needed -->
-
+    <div class="image-container">
+        <img src="/images/tobolsk_output.jpg" alt=" <i>tobolsk.jpg</i> gshift: gshift: [3, 2] rshift: [6, 3]">
+        <p class="image-description"> <i>cathedral.jpg</i> gshift: [5, 2] rshift: [12, 3]</p>
+    </div>
 </body>
 </html>
