--- a/index.html
+++ b/index.html
@@ -65,5 +65,102 @@
             <!-- You can add another image here if needed -->
         </div>
     </div>
+        <div class="image-row">
+        <div class="image-container">
+            <img src="images/icon_output.jpg" alt="icon.jpg - gshift: [3, 2] rshift: [6, 3]">
+            <p class="image-description"><i>icon.jpg</i> gshift: [3, 2] rshift: [6, 3]</p>
+        </div>
+        <div class="image-container">
+            <!-- You can add another image here if needed -->
+        </div>
+    </div>
+        <div class="image-row">
+        <div class="image-container">
+            <img src="images/harvesters_output.jpg" alt="harvesters.jpg - gshift: [3, 2] rshift: [6, 3]">
+            <p class="image-description"><i>harvesters.jpg</i> gshift: [3, 2] rshift: [6, 3]</p>
+        </div>
+        <div class="image-container">
+            <!-- You can add another image here if needed -->
+        </div>
+    </div>
+        <div class="image-row">
+        <div class="image-container">
+            <img src="images/emir_output.jpg" alt="emir_output.jpg - gshift: [3, 2] rshift: [6, 3]">
+            <p class="image-description"><i>emir.jpg</i> gshift: [3, 2] rshift: [6, 3]</p>
+        </div>
+        <div class="image-container">
+            <!-- You can add another image here if needed -->
+        </div>
+    </div>
+        <div class="image-row">
+        <div class="image-container">
+            <img src="images/church_output.jpg" alt="church_output.jpg" -">
+            <p class="image-description"><i>church.jpg"</i> </p>
+        </div>
+        <div class="image-container">
+            <!-- You can add another image here if needed -->
+        </div>
+    </div>
+        </div>
+        <div class="image-row">
+        <div class="image-container">
+            <img src="images/lady_output.jpg" alt="lady_output.jpg" -">
+            <p class="image-description"><i>lady.jpg"</i> </p>
+        </div>
+        <div class="image-container">
+            <!-- You can add another image here if needed -->
+        </div>
+    </div>
+        </div>
+        <div class="image-row">
+        <div class="image-container">
+            <img src="images/melons_output.jpg" alt="melons_output.jpg" -">
+            <p class="image-description"><i>melons.jpg"</i> </p>
+        </div>
+        <div class="image-container">
+            <!-- You can add another image here if needed -->
+        </div>
+    </div>
+        </div>
+        <div class="image-row">
+        <div class="image-container">
+            <img src="images/onion_church_output.jpg" alt="onion_church_output.jpg" -">
+            <p class="image-description"><i>onion_church.jpg"</i> </p>
+        </div>
+        <div class="image-container">
+            <!-- You can add another image here if needed -->
+        </div>
+    </div>
+        </div>
+        <div class="image-row">
+        <div class="image-container">
+            <img src="images/sculpture_output.jpg" alt="sculpture_output.jpg" -">
+            <p class="image-description"><i>sculpture.jpg"</i> </p>
+        </div>
+        <div class="image-container">
+            <!-- You can add another image here if needed -->
+        </div>
+    </div>
+        </div>
+        <div class="image-row">
+        <div class="image-container">
+            <img src="images/self_portrait_output.jpg" alt="church_output.jpg" -">
+            <p class="image-description"><i>church.jpg"</i> </p>
+        </div>
+        <div class="image-container">
+            <!-- You can add another image here if needed -->
+        </div>
+    </div>
+        </div>
+        </div>
+        <div class="image-row">
+        <div class="image-container">
+            <img src="images/three_generations_output.jpg" alt="three_generations_output.jpg" -">
+            <p class="image-description"><i>three_generations.jpg"</i> </p>
+        </div>
+        <div class="image-container">
+            <!-- You can add another image here if needed -->
+        </div>
+    </div>
 </body>
 </html>
