--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
     </div>
         <div class="image-row">
         <div class="image-container">
-            <img src="images/icon_output.jpg" alt="icon.jpg - gshift: [3, 2] rshift: [6, 3]">
-            <p class="image-description"><i>icon.jpg</i> gshift: [3, 2] rshift: [6, 3]</p>
+            <img src="images/icon_output.jpg" alt="icon.jpg - gshift: [40, 16] rshift: [90, 22]">
+            <p class="image-description"><i>icon.jpg</i> gshift: [40, 16] rshift: [90, 22]</p>
         </div>
         <div class="image-container">
             <!-- You can add another image here if needed -->
@@ -76,8 +76,8 @@
     </div>
         <div class="image-row">
         <div class="image-container">
-            <img src="images/harvesters_output.jpg" alt="harvesters.jpg - gshift: [3, 2] rshift: [6, 3]">
-            <p class="image-description"><i>harvesters.jpg</i> gshift: [3, 2] rshift: [6, 3]</p>
+            <img src="images/harvesters_output.jpg" alt="harvesters.jpg - gshift: [59, 15] rshift: [124, 12]">
+            <p class="image-description"><i>harvesters.jpg</i> gshift: [59, 15] rshift: [124, 12]</p>
         </div>
         <div class="image-container">
             <!-- You can add another image here if needed -->
@@ -85,8 +85,8 @@
     </div>
         <div class="image-row">
         <div class="image-container">
-            <img src="images/emir_output.jpg" alt="emir_output.jpg - gshift: [3, 2] rshift: [6, 3]">
-            <p class="image-description"><i>emir.jpg</i> gshift: [3, 2] rshift: [6, 3]</p>
+            <img src="images/emir_output.jpg" alt="emir_output.jpg - gshift: [49, 22] rshift: [106, 40]">
+            <p class="image-description"><i>emir.jpg</i> gshift: [49, 22] rshift: [106, 40]</p>
         </div>
         <div class="image-container">
             <!-- You can add another image here if needed -->
@@ -94,18 +94,8 @@
     </div>
         <div class="image-row">
         <div class="image-container">
-            <img src="images/church_output.jpg" alt="church_output.jpg" -">
-            <p class="image-description"><i>church.jpg"</i> </p>
-        </div>
-        <div class="image-container">
-            <!-- You can add another image here if needed -->
-        </div>
-    </div>
-        </div>
-        <div class="image-row">
-        <div class="image-container">
-            <img src="images/lady_output.jpg" alt="lady_output.jpg" -">
-            <p class="image-description"><i>lady.jpg"</i> </p>
+            <img src="images/church_output.jpg" alt="church_output.jpg - gshift: [24, -6] rshift: [55, -7]">
+            <p class="image-description"><i>church.jpg"</i> gshift: [24, -6] rshift: [55, -7]</p>
         </div>
         <div class="image-container">
             <!-- You can add another image here if needed -->
@@ -114,8 +104,8 @@
         </div>
         <div class="image-row">
         <div class="image-container">
-            <img src="images/melons_output.jpg" alt="melons_output.jpg" -">
-            <p class="image-description"><i>melons.jpg"</i> </p>
+            <img src="images/lady_output.jpg" alt="lady_output.jpg - gshift: [56, 6] rshift: [115, 11]">
+            <p class="image-description"><i>lady.jpg"</i> gshift: [56, 6] rshift: [115, 11]</p>
         </div>
         <div class="image-container">
             <!-- You can add another image here if needed -->
@@ -124,8 +114,8 @@
         </div>
         <div class="image-row">
         <div class="image-container">
-            <img src="images/onion_church_output.jpg" alt="onion_church_output.jpg" -">
-            <p class="image-description"><i>onion_church.jpg"</i> </p>
+            <img src="images/melons_output.jpg" alt="melons_output.jpg - gshift: [81, 9] rshift: [178, 12]">
+            <p class="image-description"><i>melons.jpg"</i> gshift: [81, 9] rshift: [178, 12] </p>
         </div>
         <div class="image-container">
             <!-- You can add another image here if needed -->
@@ -134,8 +124,8 @@
         </div>
         <div class="image-row">
         <div class="image-container">
-            <img src="images/sculpture_output.jpg" alt="sculpture_output.jpg" -">
-            <p class="image-description"><i>sculpture.jpg"</i> </p>
+            <img src="images/onion_church_output.jpg" alt="onion_church_output.jpg - gshift: [52, 24] rshift: [108, 35]">
+            <p class="image-description"><i>onion_church.jpg"</i> gshift: [52, 24] rshift: [108, 35] </p>
         </div>
         <div class="image-container">
             <!-- You can add another image here if needed -->
@@ -144,8 +134,18 @@
         </div>
         <div class="image-row">
         <div class="image-container">
-            <img src="images/self_portrait_output.jpg" alt="church_output.jpg" -">
-            <p class="image-description"><i>church.jpg"</i> </p>
+            <img src="images/sculpture_output.jpg" alt="sculpture_output.jpg - gshift: [33, -12] rshift: [140, -27]">
+            <p class="image-description"><i>sculpture.jpg"</i> gshift: [33, -12] rshift: [140, -27]</p>
+        </div>
+        <div class="image-container">
+            <!-- You can add another image here if needed -->
+        </div>
+    </div>
+        </div>
+        <div class="image-row">
+        <div class="image-container">
+            <img src="images/self_portrait_output.jpg" alt="church_output.jpg - gshift: [78, 28] rshift: [176, 36]">
+            <p class="image-description"><i>church.jpg"</i> gshift: [78, 28] rshift: [176, 36] </p>
         </div>
         <div class="image-container">
             <!-- You can add another image here if needed -->
@@ -155,8 +155,8 @@
         </div>
         <div class="image-row">
         <div class="image-container">
-            <img src="images/three_generations_output.jpg" alt="three_generations_output.jpg" -">
-            <p class="image-description"><i>three_generations.jpg"</i> </p>
+            <img src="images/three_generations_output.jpg" alt="three_generations_output.jpg - gshift: [53, 14]rshift: [112, 10]">
+            <p class="image-description"><i>three_generations.jpg"</i> gshift: [53, 14] rshift: [112, 10]</p>
         </div>
         <div class="image-container">
             <!-- You can add another image here if needed -->
