--- a/index.html
+++ b/index.html
@@ -162,5 +162,17 @@
             <!-- You can add another image here if needed -->
         </div>
     </div>
+        </div>
+        </div>
+        </div>
+        <div class="image-row">
+        <div class="image-container">
+            <img src="images/train_output.jpg" alt="train_output.jpg - gshift: [42, 0] rshift: [86, 30]">
+            <p class="image-description"><i>train.jpg"</i> gshift: [42, 0] rshift: [86, 30]</p>
+        </div>
+        <div class="image-container">
+            <!-- You can add another image here if needed -->
+        </div>
+    </div>
 </body>
 </html>
