--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
            elif i < 3:<br>
            &nbsp;&nbsp;&nbsp;&nbsp;wndw = i +1<br>
            scale = 1/2**i</p>
-        <p>i is the variable for the index of the largeness of the image, at 0th index, we have the original image. With this refined windows for the recursive calls, the algorithm runs faster and still able to obtain color images. After obtaining the final images, I cropped %8 from each side along each images.</p>
+        <p>i is the variable for the index of the largeness of the image, at 0th index, we have the original image. With this refined windows for the recursive calls, the algorithm runs faster and still able to obtain color images. After obtaining the final images, I cropped %8 from each side along each dimension for each image.</p>
     </div>
 
     <h2>Images</h2>
