--- a/project1.html
+++ b/project1.html
@@ -133,16 +133,16 @@
             <p class="image-description"><i>train.jpg</i> gshift: [42, 0] rshift: [86, 30]</p>
         </div>
         <div class="image-container">
-            <img src="images/religious_portrait.jpg" alt="religious_portrait.jpg - gshift: [29, 4] rshift: [69, 6]">
-            <p class="image-description"><i>religious_portrait.jpg</i> gshift: [29, 4] rshift: [69, 6]</p>
+            <img src="images/religious_portrait.jpg" alt="religious_portrait.jpg (my choosing from collection) - gshift: [29, 4] rshift: [69, 6]">
+            <p class="image-description"><i>religious_portrait.jpg</i> (my choosing from collection) gshift: [29, 4] rshift: [69, 6]</p>
         </div>
         <div class="image-container">
-            <img src="images/landscape.jpg" alt="landscape.jpg - gshift: [14, 26] rshift: [84, 50]">
-            <p class="image-description"><i>landscape.jpg</i> gshift: [14, 26] rshift: [84, 50]</p>
+            <img src="images/landscape.jpg" alt="landscape.jpg (my choosing from collection) - gshift: [14, 26] rshift: [84, 50]">
+            <p class="image-description"><i>landscape.jpg</i> (my choosing from collection) gshift: [14, 26] rshift: [84, 50]</p>
         </div>
         <div class="image-container">
-            <img src="images/napoleon.jpg" alt="napoleon.jpg - gshift: [64, 4] rshift: [132, -2]">
-            <p class="image-description"><i>napoleon.jpg</i> gshift: [64, 4] rshift: [132, -2]</p>
+            <img src="images/napoleon.jpg" alt="napoleon.jpg (my choosing from collection) - gshift: [64, 4] rshift: [132, -2]">
+            <p class="image-description"><i>napoleon.jpg</i> (my choosing from collection) gshift: [64, 4] rshift: [132, -2]</p>
         </div>
     </div>
 </body>
