--- a/project1.html
+++ b/project1.html
@@ -71,7 +71,7 @@
            elif i < 3:<br>
            &nbsp;&nbsp;&nbsp;&nbsp;wndw = i +1<br>
            scale = 1/2**i</p>
-        <p>i is the variable for the index of the largeness of the image, at 0th index, we have the original image. With this refined windows for the recursive calls, the algorithm runs faster and still able to obtain color images with accuracy. After obtaining the final images, I cropped %8 from each side along each dimension for each image to get rid of the border pixels.</p>
+        <p>i is the variable for the index based on the largeness of the image, at 0th index, we have the original image. With this refined windows for the recursive calls, the algorithm runs faster and still able to obtain color images with accuracy. After obtaining the final images, I cropped %8 from each side along each dimension for each image to get rid of the border pixels.</p>
     </div>
 
     <h2>Images</h2>
