--- a/index.html
+++ b/index.html
@@ -39,5 +39,6 @@
 <body>
     <h1>Welcome to My Portfolio!</h1>
     <a href="project1.html" class="project-link">Project 1: Colorizing the Prokudin-Gorskii Photo Collection</a>
+    <a href="project2.html" class="project-link">Project 2: Fun with Filters and Frequencies!</a>
 </body>
 </html>
