--- a/project2.html
+++ b/project2.html
@@ -54,12 +54,12 @@
     </style>
 </head>
 <body>
-    <h1>Project 1: Images of the Russian Empire -- Colorizing the Prokudin-Gorskii Photo Collection</h1>
+    <h1>Project 2: Fun with Filters and Frequencies!</h1>
     <h2>Alp Eren Ozdarendeli</h2>
 
     <div class="Background">
         <h2>Background</h2>
-        <p>With Tzar’s special permission, Sergei Mikhailovich Prokudin-Gorskii travelled across the Russian Empire in the 20th century. He has taken photographs of everything, ranging from people to buildings even bridges. His idea was to save three exposures of thousands of color pictures onto a glass plate with red, green, and blue filters. His glass plate negatives has been digitized by the Library of Congress. This project aims to automatically produce a color image of these glass plate images with modern image processing methods. </p>
+        <p>In this project, I focused on manipulating image frequencies to achieve various effects. I sharpened images by boosting high-frequency components, created hybrid images by combining high and low frequencies from different images, and blended iamges using Gaussian and Laplacian stacks.</p>
     </div>
     
     <div class="project-overview">
